# AutoKeyLoop

./: .gitignore  .gitmodules  Makefile  README.md  config.ini
.git copy/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
.github/: FUNDING.yml  hbappstore.json
.github/workflows/: update_hbappstore.yml  update_release_json.yml
assets/: config.template.ini
log/: log.c  log.h
ovl-AutoKeyLoop/: ChineseTitle.py  Makefile
ovl-AutoKeyLoop/include/: about_plugin.hpp  ipc_manager.hpp  language_manager.hpp  main_menu.hpp  setting_manager.hpp  sysmodule_manager.hpp
ovl-AutoKeyLoop/source/: about_plugin.cpp  game_monitor.cpp  ipc_manager.cpp  language_manager.cpp  main.cpp  main_menu.cpp  setting_manager.cpp  sysmodule_manager.cpp
ovl-KeyX/: ChineseTitle.py  Makefile  ovl-KeyX.nacp  ovl-KeyX.ovl  parse_macro.py  parse_macroV2.py
ovl-KeyX/include/: focusmonitor.hpp  ipc_manager.hpp  main_menu.hpp  main_whitelist.hpp  record_macro.hpp  setting_menu.hpp  sysmodule_manager.hpp
ovl-KeyX/source/: about_plugin.cpp  focusmonitor.cpp  ipc_manager.cpp  main.cpp  main_menu.cpp  main_menu_setting.cpp  main_whitelist.cpp  (+2 more)
source/: app.cpp  app.hpp  autokeymanager.cpp  autokeymanager.hpp  input_monitor.cpp  input_monitor.hpp  ipc.hpp  main.cpp
sys-AutoKeyLoop/: Makefile
sys-AutoKeyLoop/lib/minIni-nx/: .gitignore  CMakeLists.txt
sys-AutoKeyLoop/lib/minIni-nx/include/: minGlue.h
sys-AutoKeyLoop/lib/minIni-nx/source/: minGlue.c
sys-KeyX/: Makefile
sys-json/: sys-autokeyfire.json  sys-autokeyloop.json  toolbox.json
update/: Makefile  update.json
(+163 files in other folders)
